Update Spruce CSS

--- a/src/docs/elements/forms.mdx
+++ b/src/docs/elements/forms.mdx
@@ -508,7 +508,9 @@ Use the `form-description` class to create a description text under an input ele
 
 You can set valid and invalid states on `form-control` elements using the `form-control--valid` and `form-control--invalid` class modifiers.
 
-Also, you can display separate messages using the `field-feedback` class and its modifiers.
+Also, you can display separate messages using the `field-feedback` class and its modifiers:
+- `field-feedback--valid` for valid state,
+- `field-feedback--invalid` for invalid state.
 
 <Preview>
 <fieldset>
