--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -257,9 +257,11 @@ We use the `$escaping-characters` under the <code><a href="/docs/sass/functions/
 ```scss
 @use 'sprucecss/scss/spruce' with (
   $form-label: (
+    'font-family': null,
     'font-size': null,
     'font-style': null,
     'font-weight': null,
+    'text-align': start,
   ),
 );
 ```
