Fix form-file example

--- a/src/docs/elements/forms.mdx
+++ b/src/docs/elements/forms.mdx
@@ -81,7 +81,7 @@ Use the `form-file` class on an `input[type="file"]` to nativly style the file i
     </div>
     <div class="form-group">
       <label class="form-label" for="avatar">Avatar</label>
-      <input class="form-file form-file" type="file" id="avatar" accept="image/png, image/jpeg"/>
+      <input class="form-file" type="file" id="avatar" accept="image/png, image/jpeg"/>
     </div>
     <div class="form-group">
       <label class="form-label" for="files">Files</label>
@@ -99,7 +99,7 @@ Use the `form-file` class on an `input[type="file"]` to nativly style the file i
     </div>
     <div class="form-group">
       <label class="form-label" for="avatar">Avatar</label>
-      <input class="form-file form-file" type="file" id="avatar" accept="image/png, image/jpeg"/>
+      <input class="form-file" type="file" id="avatar" accept="image/png, image/jpeg"/>
     </div>
     <div class="form-group">
       <label class="form-label" for="files">Files</label>
