--- a/src/blog/8-helpful-sass-mixins-and-functions.mdx
+++ b/src/blog/8-helpful-sass-mixins-and-functions.mdx
@@ -2,7 +2,7 @@
 title: '8 Helpful Sass Mixins and Functions'
 date: 2023-06-29
 featuredImage: '../images/blog/8-helpful-sass-mixins-and-functions.png'
-alt: 'Sass is a CSS preprocessor, like CSS on steroids, a small programming language in CSS. Wheater it is helpful for your project or not, it is a powerful tool that can solve and simplify things.'
+alt: 'A geometric illustration pattern.'
 published: true
 tags: ['scss']
 ---
