--- a/src/blog/cracking-the-theme-switcher-and-dark-mode.mdx
+++ b/src/blog/cracking-the-theme-switcher-and-dark-mode.mdx
@@ -181,6 +181,6 @@ If we have to ask for permission beforehand, we have to add a new acceptance lay
 
 ## Summary
 
-You can see this in action in our [Spruce Docs](https://github.com/conedevelopment/sprucecss-eleventy-documentation-template) theme with a sligthly modified theme switcher (it still has 95% the same code but using buttons not a select). Because of Spruce CSS, the theme handling is a bit more abstract, but if you compile the code, you will see the same CSS custom property structure we showed you here.
+You can see this in action in our [Spruce Docs](https://github.com/conedevelopment/sprucecss-eleventy-documentation-template) theme with a slightly modified theme switcher (it still has 95% the same code but using buttons not a select). Because of Spruce CSS, the theme handling is a bit more abstract, but if you compile the code, you will see the same CSS custom property structure we showed you here.
 
 Right now, for us, this is quite a good solution. Because it does the work on the client side, the asset handling is not our favorite because there can be some unnecessary flashing. This is primarily noticeable with the logo, but we try to tackle this with an embedded SVG with its own CSS for recoloring.
