--- a/src/blog/the-simplest-sass-compile-setup.mdx
+++ b/src/blog/the-simplest-sass-compile-setup.mdx
@@ -51,7 +51,7 @@ To install Sass, we have to run the following npm command:
 npm install sass --save-dev
 ```
 
-The `–save-dev` flag means that Sass is a development dependency (as you will see in your `package.json`, it is under the `devDependecies` object).
+The `–save-dev` flag means that Sass is a development dependency (as you will see in your `package.json`, it is under the `devDependencies` object).
 
 Now we have the Sass functionality with access to the previously mentioned CLI with its commands.
 
