--- a/src/template/documentation.mdx
+++ b/src/template/documentation.mdx
@@ -35,7 +35,7 @@ By structure, it is simple, with two levels and additional custom templates like
 - [svgIcon](https://github.com/conedevelopment/sprucecss-eleventy-documentation-template/blob/main/src/shortcodes/svg-icon.js) shortcode: render any SVG icon inline and add optional classes.
 - [markdownRenderer](https://github.com/conedevelopment/sprucecss-eleventy-documentation-template/blob/main/src/shortcodes/markdown-render.js): render any string (markdown) into HTML.
 
-## Content Managment
+## Content Management
 
 Adding content to the template is easy as almost everything is in Eleventy.
 
