Update Root template description

--- a/src/template/root.mdx
+++ b/src/template/root.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Root'
-description: 'A straightforward administration template with standard views and lots of components.'
+description: 'A straightforward and free HTML administration template with standard views and many components.'
 featuredImage: '../images/templates/root.png'
 alt: 'The preview of the documentation template in a browser.'
 darkImage: '../images/templates/root-dark.png'
@@ -14,13 +14,17 @@ published: true
 tags: ['HTML', 'Free']
 ---
 
-<p className="lead">A straightforward administration template with standard views and lots of components.</p>
+<p className="lead">A straightforward administration template with standard views and many components.</p>
 
-The template is used in our Laravel admin package named [Root](https://root.conedevelopment.com/), so it will probably change regularly in the future.
+The Root theme is minimalistic, still containing many things that can be handy when you build a fully-fledged administration app.
 
-## What You Get
+The template is used in our Laravel admin package named [Root](https://root.conedevelopment.com/), so it will probably change regularly.
 
-We used [Alpine.js](https://alpinejs.dev/) to handle the JS code. Although there are some quite complete JS behaviors, this template is still static HTML/CSS, so you have to do the interactive part.
+**We used [Alpine.js](https://alpinejs.dev/) to handle the JS code.** Although there are some quite complete JS behaviors, this template is still static HTML/CSS, so you have to tackle the back-end and front-end functionality.
+
+## What's in the Box 📦
+
+The admin template comes with dark mode support that you can switch at the user menu by default.
 
 **Right now, you can grab the following views or layouts:**
 
@@ -38,10 +42,10 @@ We used [Alpine.js](https://alpinejs.dev/) to handle the JS code. Although there
 
 **There are a lot of admin-specific components:**
 
-- Modal window with customizations.
+- A reusable modal component.
 - Data table block with search and filter support.
-- Simple search.
-- Various drop-down menus.
-- Widget cards.
-- Media handler modal.
-- Combobox.
+- A simple in-text search.
+- Various drop-down menus for context actions.
+- Widget cards to display data and graphs.
+- Media handler modal to list and handle your images.
+- Combobox for multi-select purposes.
