Fix broken links

--- a/src/blog/how-to-choose-a-css-framework.mdx
+++ b/src/blog/how-to-choose-a-css-framework.mdx
@@ -46,7 +46,7 @@ Of course, we can update our system (like in the case of Bootstrap) but using Bo
 
 There are many different frameworks for stylesheets; it is a broad spectrum. Today’s most popular one is [Bootstrap](https://getbootstrap.com/), a comprehensive toolkit with Sass support, grid system, and components.
 
-Another Bootstrap-like solution is [Bulma](https://bulma.io/), which is also a more prominent player. You can try [Tailwind CSS](tailwindcss.com), a great utility first system if you want something radically different, which today is as big as Bootstrap.
+Another Bootstrap-like solution is [Bulma](https://bulma.io/), which is also a more prominent player. You can try [Tailwind CSS](https://tailwindcss.com/), a great utility first system if you want something radically different, which today is as big as Bootstrap.
 
 The most significant advantage of the mentioned ones is that they come with many resources, support, and excellent documentation. One significant disadvantage is that learning them and staying updated is more challenging (but a learning curve is always present).
 
