--- a/src/docs/sass/functions.mdx
+++ b/src/docs/sass/functions.mdx
@@ -215,13 +215,13 @@ Get a value by key name from the `$settings` map.
 
 ## spacer
 
-Get one or two (separeted with colon) value by key name from the `$spacers` map.
+Get one or two (separated with a colon) values by key name from the `$spacers` map.
 
 ### Argument(s)
 
 | Name          | Description                                                                          |
 |---------------|--------------------------------------------------------------------------------------|
-| `$key`        | The name of the spacer or a shorthand for two value separeted with a colon ('m:l').  |
+| `$key`        | The name of the spacer or shorthand for two values separated with a colon ('m:l').   |
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/function/_spacer.scss#L5)
 
