Fix typo in functions.mdx

--- a/src/docs/sass/functions.mdx
+++ b/src/docs/sass/functions.mdx
@@ -237,7 +237,7 @@ Get one or two (separated with a colon) values by key name from the `$spacers` m
 }
 ```
 
-The shorthand syntax is useful when you want a separate value for block and inline. It only supports two value.
+The shorthand syntax is useful when you want a separate value for block and inline. It supports only two values.
 
 ## spacer-clamp
 
